--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 altgraph==0.10.2
 bdist-mpkg==0.5.0
 beautifulsoup4==4.4.1
-bonjour-py==0.3
 bottlenose==0.6.3
 Django==1.9.4
+django-jquery==1.12.2
 ebaysdk==2.1.3
+gunicorn==19.4.5
 httplib2==0.9.2
 lxml==3.5.0
 macholib==1.5.1
